# firewall_skeleton

./: CMakeLists.txt  README.md
firewall_archive/rules/: default_rule.conf
firewall_data/: CMakeLists.txt
firewall_data/rule/: CMakeLists.txt  base.in  layout.in
firewall_files/init/: CMakeLists.txt  firewall-manager  firewall-manager.service
firewall_files/rule/: whitelist_static.in
